dashboard monthanme and year nowrap and nbsp to prevent linebreak

--- a/src/app/components/termin/dashboard/dashboard.component.scss
+++ b/src/app/components/termin/dashboard/dashboard.component.scss
@@ -161,7 +161,8 @@ $handleLength: 25px;
     margin: 0 auto 15px;
     border-bottom-left-radius: 15px;
     border-top-right-radius: 15px;
-    white-space: pre-wrap;
+    white-space: nowrap;
+    min-width: 200px;
   }
 }
 
